--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
